﻿Subtitle Edit Changelog


3.3.8 (x August 2013)
* NEW:
   * Added Hungarian language file - thx thx Zityi
   * Added a few new subtitle formats
   * Added Tools -> Sort by -> Style - thx Mike
* IMPROVED:
   * Updated Spanish language file - thx pakitonaranjo
   * Updated Polish language file - thx Admas
   * Updated Brazilian Portuguese language file - thx Igor Rückert
   * Added support for the Māori language in PAC - thx Mark
   * Allow ebu stl with 29 fps - thx Antonio
   * Minor improvements to WebVTT + added WebVTT with line# - thx Benoît
   * Loading unknown subtitles now might work via generic parser
* FIXED:
   * Fix common errors: Fixed two bugs regarding Spanish "¿¡ !?" - thx Mike
   * Bug in getting result from plugin - thx Herman
   * Fix in "Unknwown format 64" - thx Mark
   * Some fixes for SCC - thx Johan
   * Converting ssa <--> ass now keeps most inline styles - thx Mike
   * Fix common errors: In "Remove empty lines" at top (in paragraph) the 
     before/after text was switched - thx Andreas


3.3.7 (3rd August 2013)
* NEW:
   * Added Spanish (Mexico) language file - thx paconaranjo
   * Added a few new subtitle formats
* IMPROVED:
   * Updated Portuguese language file - thx moob
   * Updated Basque langauge file - thx Xabier Aramendi
   * Updated Dutch language file - thx Herman
   * Updated Czech language file - thx Trottel
   * Updated Brazilian Portuguese translation - thx Igor Rückert
   * Updated German translation - thx Siegwarth
   * Moving subtitles in waveform will not allow overlap (unless 
     you hold down the shift key) - thx Leon
   * Added "regular expression" option to ocr_replace_list - thx paconaranjo
   * Waveform generator - pauses video before starting - thx fox
   * Export to Blu-ray settings now saved - thx Minh
   * Do not load plugins + subtitle formats when opening a sub - thx Orr
   * Fixed slow loading of regular expressions in "Multiple replace" - thx TeDDy